--- a/site/src/app/components/pages/administration/equipments/list/list.component.html
+++ b/site/src/app/components/pages/administration/equipments/list/list.component.html
@@ -1,5 +1,6 @@
 <div class="page list-page">
-    <button class="blue"  (click)="navigateTo('/administration/equipments/new')">Ajouter un équipement</button>
-    <app-administration-equipments-list></app-administration-equipments-list>
+  <button class="blue" (click)="navigateTo('/administration/equipments/new')">
+    Ajouter un équipement
+  </button>
+  <app-administration-equipments-list></app-administration-equipments-list>
 </div>
-  
