--- a/site/src/app/components/partials/login-form/login-form.component.html
+++ b/site/src/app/components/partials/login-form/login-form.component.html
@@ -27,7 +27,7 @@
       formControlName="password"
       placeholder="***********"
       [ngClass]="{
-        'invalid-input': submitted && formControls['password'].errors
+        'invalid-input': submitted && formControls['password'].errors,
       }"
     />
     <div
