--- a/site/src/app/components/pages/administration/accounts/list/list.component.html
+++ b/site/src/app/components/pages/administration/accounts/list/list.component.html
@@ -1,4 +1,6 @@
 <div class="page list-page">
-    <button class="blue"  (click)="navigateTo('/administration/accounts/new')">Ajouter un compte</button>
-    <app-administration-accounts-list></app-administration-accounts-list>
+  <button class="blue" (click)="navigateTo('/administration/accounts/new')">
+    Ajouter un compte
+  </button>
+  <app-administration-accounts-list></app-administration-accounts-list>
 </div>
