--- a/site/src/app/components/pages/administration/references/list/list.component.html
+++ b/site/src/app/components/pages/administration/references/list/list.component.html
@@ -1,5 +1,6 @@
 <div class="page list-page">
-    <button class="blue"  (click)="navigateTo('/administration/references/new')">Ajouter une référence</button>
-    <app-administration-references-list></app-administration-references-list>
+  <button class="blue" (click)="navigateTo('/administration/references/new')">
+    Ajouter une référence
+  </button>
+  <app-administration-references-list></app-administration-references-list>
 </div>
-  
