--- a/site/src/app/components/pages/administration/types/list/list.component.html
+++ b/site/src/app/components/pages/administration/types/list/list.component.html
@@ -1,5 +1,6 @@
 <div class="page list-page">
-    <button class="blue"  (click)="navigateTo('/administration/types/new')">Ajouter un type</button>
-    <app-administration-types-list></app-administration-types-list>
+  <button class="blue" (click)="navigateTo('/administration/types/new')">
+    Ajouter un type
+  </button>
+  <app-administration-types-list></app-administration-types-list>
 </div>
-  
