--- a/site/src/app/components/partials/administration-loans-list/administration-loans-list.component.html
+++ b/site/src/app/components/partials/administration-loans-list/administration-loans-list.component.html
@@ -25,14 +25,14 @@
             loan.state.name === 'REQUESTED' ||
             loan.state.name === 'RETURN_REQUESTED',
           red: loan.state.name === 'REFUSED',
-          grey: loan.state.name === 'RETURNED'
+          grey: loan.state.name === 'RETURNED',
         }"
       >
         {{ loan.state.display_name_french }}
       </td>
-      <td>{{ loan.loan_date | date : "dd/MM/yyyy" }}</td>
+      <td>{{ loan.loan_date | date: "dd/MM/yyyy" }}</td>
       <td [ngClass]="{ red: isReturnDateExceeded(loan.return_date) }">
-        {{ loan.return_date | date : "dd/MM/yyyy" }}
+        {{ loan.return_date | date: "dd/MM/yyyy" }}
       </td>
       <td>{{ loan.equipment.code }}</td>
       <td>{{ loan.equipment.reference.name }}</td>
@@ -51,7 +51,7 @@
           >
             Accepter la demande d'emprunt
           </button>
-          
+
           <button
             class="red"
             (click)="onLoanStateUpdate(loan.equipment.code, 'REFUSED')"
@@ -68,10 +68,7 @@
             Accepter la demande de retour
           </button>
 
-          <button
-            class="red"
-            (click)="onLoanDelete(loan.equipment.code)"
-          >
+          <button class="red" (click)="onLoanDelete(loan.equipment.code)">
             Supprimer
           </button>
         </div>
