--- a/site/src/app/components/partials/administration-new-reference-form/administration-new-reference-form.component.html
+++ b/site/src/app/components/partials/administration-new-reference-form/administration-new-reference-form.component.html
@@ -1,7 +1,4 @@
-<form
-  [formGroup]="formGroup"
-  (ngSubmit)="onSubmit()"
->
+<form [formGroup]="formGroup" (ngSubmit)="onSubmit()">
   <div>
     <label for="name">Nom</label>
     <input
@@ -23,15 +20,12 @@
     <label for="typeName">Type</label>
     <select
       formControlName="typeName"
-      [ngClass]="{ 'invalid-input': submitted && formControls['typeName'].errors }"
+      [ngClass]="{
+        'invalid-input': submitted && formControls['typeName'].errors,
+      }"
     >
-      <option value="" disabled selected>
-        Sélectionner un type
-      </option>
-      <option
-        *ngFor="let type of types"
-        [value]="type.name"
-      >
+      <option value="" disabled selected>Sélectionner un type</option>
+      <option *ngFor="let type of types" [value]="type.name">
         {{ type.name }}
       </option>
     </select>
@@ -45,7 +39,5 @@
     </div>
   </div>
 
-  <button class="blue" type="submit">
-    Ajouter
-  </button>
+  <button class="blue" type="submit">Ajouter</button>
 </form>
