--- a/site/src/app/components/partials/administration-new-type-form/administration-new-type-form.component.html
+++ b/site/src/app/components/partials/administration-new-type-form/administration-new-type-form.component.html
@@ -1,7 +1,4 @@
-<form
-  [formGroup]="formGroup"
-  (ngSubmit)="onSubmit()"
->
+<form [formGroup]="formGroup" (ngSubmit)="onSubmit()">
   <div>
     <label for="name">Nom</label>
     <input
@@ -21,13 +18,8 @@
 
   <div>
     <label for="organizationOnly">Réservé aux organisations</label>
-    <input
-      type="checkbox"
-      formControlName="organizationOnly"
-    />
+    <input type="checkbox" formControlName="organizationOnly" />
   </div>
 
-  <button class="blue" type="submit">
-    Ajouter
-  </button>
+  <button class="blue" type="submit">Ajouter</button>
 </form>
