--- a/site/src/app/components/partials/header/header.component.html
+++ b/site/src/app/components/partials/header/header.component.html
@@ -1,4 +1,8 @@
-<div class='navbar'>
+<div class="navbar">
   <span>Équipements</span>
-  <img src='../../../../assets/home.png' alt='Accueil' (click)='navigateToHome()'>
+  <img
+    src="../../../../assets/home.png"
+    alt="Accueil"
+    (click)="navigateToHome()"
+  />
 </div>
