--- a/site/src/app/components/partials/user-loans-list/user-loans-list.component.html
+++ b/site/src/app/components/partials/user-loans-list/user-loans-list.component.html
@@ -24,14 +24,14 @@
             loan.state.name === 'REQUESTED' ||
             loan.state.name === 'RETURN_REQUESTED',
           red: loan.state.name === 'REFUSED',
-          grey: loan.state.name === 'RETURNED'
+          grey: loan.state.name === 'RETURNED',
         }"
       >
         {{ loan.state.display_name_french }}
       </td>
-      <td>{{ loan.loan_date | date : "dd/MM/yyyy" }}</td>
+      <td>{{ loan.loan_date | date: "dd/MM/yyyy" }}</td>
       <td [ngClass]="{ red: isReturnDateExceeded(loan.return_date) }">
-        {{ loan.return_date | date : "dd/MM/yyyy" }}
+        {{ loan.return_date | date: "dd/MM/yyyy" }}
       </td>
       <td>{{ loan.equipment.code }}</td>
       <td>{{ loan.equipment.reference.name }}</td>
