--- a/site/src/styles/form.css
+++ b/site/src/styles/form.css
@@ -13,10 +13,11 @@ select {
   all: unset;
 }
 
-input, select {
+input,
+select {
   background-color: white;
   border: 1px solid var(--grey);
-  padding: .5em;
+  padding: 0.5em;
   font-size: 1em;
   border-radius: 5px;
   width: 100%;
@@ -24,7 +25,7 @@ input, select {
 }
 
 .invalid-input {
-  border-color: var(--red)
+  border-color: var(--red);
 }
 
 .invalid-indicator {
