--- a/site/src/styles/styles.css
+++ b/site/src/styles/styles.css
@@ -1,4 +1,4 @@
-@import url('https://fonts.googleapis.com/css2?family=KoHo:ital,wght@0,200;0,300;0,400;0,500;0,600;0,700;1,200;1,300;1,400;1,500;1,600;1,700&display=swap');
+@import url("https://fonts.googleapis.com/css2?family=KoHo:ital,wght@0,200;0,300;0,400;0,500;0,600;0,700;1,200;1,300;1,400;1,500;1,600;1,700&display=swap");
 
 :root {
   --light-blue: #ddf2ff;
@@ -23,7 +23,7 @@
 
 body {
   all: unset;
-  font-family: 'KoHo', sans-serif;
+  font-family: "KoHo", sans-serif;
   font-weight: 400;
 }
 
