Users organisation list

--- a/site/src/app/components/partials/administration-user-organizations-list/administration-user-organizations-list.component.html
+++ b/site/src/app/components/partials/administration-user-organizations-list/administration-user-organizations-list.component.html
@@ -2,14 +2,44 @@
   <thead>
     <tr>
       <th>Organisation</th>
+      <th *ngIf="organizations.length > 0">Actions</th>
+      <th>Ajouter une organisation</th>
     </tr>
   </thead>
   <tbody>
     <tr *ngIf="organizations.length === 0">
-      <td colspan="1">Aucune organisation</td>
+      <td colspan="3">Aucune organisation</td>
     </tr>
     <tr *ngFor="let organization of organizations">
       <td>{{ organization.name }}</td>
+      <td *ngIf="organizations.length > 0">
+        <button class="red" (click)="onOrganizationDelete(organization.name)">
+          Supprimer
+        </button>
+      </td>
+    </tr>
+    <tr>
+      <td colspan="2"></td>
+      <td>
+        <select
+          formControlName="selectedOrganization"
+          [ngClass]="{ 'invalid-input': submitted && !selectedOrganization }"
+        >
+          <option value="" disabled hidden selected>
+            Ajouter une organisation
+          </option>
+          <option *ngFor="let org of availableOrganizations" [value]="org.name">
+            {{ org.name }}
+          </option>
+        </select>
+        <button class="blue" (click)="onOrganizationAdd()">Ajouter</button>
+        <div
+          *ngIf="submitted && !selectedOrganization"
+          class="invalid-indicator"
+        >
+          L'organisation est requise
+        </div>
+      </td>
     </tr>
   </tbody>
 </table>
