--- a/site/src/app/components/pages/administration/users/organizations/list/list.component.html
+++ b/site/src/app/components/pages/administration/users/organizations/list/list.component.html
@@ -1,3 +1,6 @@
 <div class="page list-page">
+  <button class="blue" (click)="navigateTo('/administration/users/organizations/add')">
+    Ajouter une organisation
+  </button>
   <app-administration-user-organizations-list></app-administration-user-organizations-list>
 </div>
