--- a/site/src/app/components/pages/administration/users/organizations/list/list.component.html
+++ b/site/src/app/components/pages/administration/users/organizations/list/list.component.html
@@ -1,5 +1,8 @@
 <div class="page list-page">
-  <button class="blue" (click)="navigateTo('/administration/users/organizations/add')">
+  <button
+    class="blue"
+    (click)="navigateTo('/administration/users/organizations/new')"
+  >
     Ajouter une organisation
   </button>
   <app-administration-user-organizations-list></app-administration-user-organizations-list>
