--- a/site/src/app/components/partials/administration-user-organizations-list/administration-user-organizations-list.component.html
+++ b/site/src/app/components/partials/administration-user-organizations-list/administration-user-organizations-list.component.html
@@ -11,9 +11,11 @@
     </tr>
     <tr *ngFor="let organization of organizations">
       <td>{{ organization.name }}</td>
-      <button class="red" (click)="onOrganizationDelete(organization.name)">
-        Supprimer
-      </button>
+      <div class="actions">
+        <button class="red" (click)="onOrganizationDelete(organization.name)">
+          Supprimer
+        </button>
+      </div>
     </tr>
   </tbody>
 </table>
